--- a/contacts.html
+++ b/contacts.html
@@ -134,6 +134,17 @@
                 </div>
               </div>
             </div>
+
+            Директор 2-14-84
+            Заместитель директора, диспетчер по вывозу ТКО 2-22-62
+            Юрист, отдел кадров, специалист по взысканию просроченной задолженности, инженер по охране окружающей среды 2-30-13
+            Бухгалтерия 2-17-89
+            Касса, контролеры  2-22-46
+            Диспетчер 2-14-63
+            Городская баня  2-09-11
+            НС 2 подъема 2-81-36
+            ОСК г. Яранска 2-10-84
+
             <div class="content__row box">
               <div id="ymap" class="map">
                 <iframe
@@ -156,7 +167,7 @@
                   <span>12:00 — 13:00</span>
                 </div>
                 <div class="contacts__item-col">
-                  <span>Касса без обеда, пасспортный стол с 08:00 до 11:00</span>
+                  <span>Касса без обеда</span>
                 </div>
               </div>
               <div class="contacts__item-row row">
@@ -170,7 +181,7 @@
                   <span>12:00 — 13:00</span>
                 </div>
                 <div class="contacts__item-col">
-                  <span>Касса без обеда, пасспортный стол с 08:00 до 11:00</span>
+                  <span>Касса без обеда</span>
                 </div>
               </div>
               <div class="contacts__item-row row">
@@ -184,7 +195,7 @@
                   <span>12:00 — 13:00</span>
                 </div>
                 <div class="contacts__item-col">
-                  <span>Касса без обеда, пасспортный стол с 08:00 до 11:00</span>
+                  <span>Касса без обеда</span>
                 </div>
               </div>
               <div class="contacts__item-row row">
@@ -198,7 +209,7 @@
                   <span>12:00 — 13:00</span>
                 </div>
                 <div class="contacts__item-col">
-                  <span>Касса без обеда, пасспортный стол с 08:00 до 11:00</span>
+                  <span>Касса без обеда</span>
                 </div>
               </div>
               <div class="contacts__item-row row">
@@ -212,7 +223,7 @@
                   <span>12:00 — 13:00</span>
                 </div>
                 <div class="contacts__item-col">
-                  <span>Касса без обеда, пасспортный стол с 08:00 до 11:00</span>
+                  <span>Касса без обеда</span>
                 </div>
               </div>
               <div class="contacts__item-row row">
