--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
           <nav class="header__main-navigation">
             <ul class="header__navigation-list">
               <li class="header__navigation-list__item">
-                <a href="about.html" class="nav__link">О предприятии</a>
+                <a class="nav__link">О предприятии</a>
+                <ul class="navigation__sub-menu box">
+                  <li><a href="about.html" class="nav__link">История</a></li>
+                  <li><a href="details.html" class="nav__link">Реквизиты</a></li>
+                  <li><a href="#" class="nav__link">Вакансии</a></li>
+                </ul>
               </li>
               <li class="header__navigation-list__item">
                 <a href="news.html" class="nav__link">Новости</a>
@@ -105,14 +110,14 @@
           <div class="company__info-cards row">
             <div class="company__info-cards__item box">
               <img src="images/icons/waterIcon.svg" class="item__icon image" alt="2" />
-              <p class="item__title">Городская водопроводная сеть</p>
-              <span class="item__subtitle">Суммарной протяженностью: 103,2 км</span>
+              <p class="item__title">Протяженность водопроводных сетей</p>
+              <span class="item__subtitle">Суммарной протяженностью: 201,549 км</span>
             </div>
 
             <div class="company__info-cards__item box">
               <img src="images/icons/TubeIcon.svg" class="item__icon image" alt="2" />
-              <p class="item__title">Городская канализационная сеть</p>
-              <span class="item__subtitle">Суммарной протяженностью: 43,2 км</span>
+              <p class="item__title">Протяженность канализационных сетей</p>
+              <span class="item__subtitle">Суммарной протяженностью: 56,033 км</span>
             </div>
 
             <div class="company__info-cards__item box">
@@ -208,25 +213,20 @@
                 <div class="footer__heading">Контакты</div>
                 <ul class="footer__nav-list">
                   <li>
-                    <span>Диспетчер</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                    <span>Директор</span>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-14-84 </a>
                   </li>
                   <li>
-                    <span>Бухгалтерия</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                    <span>Диспетчер</span>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-14-63 </a>
                   </li>
+
                   <li>
                     <span>Касса</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-22-46 </a>
                   </li>
-                  <li>
-                    <span>Юрист</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                  </li>
-                  <li>
-                    <span>Директор</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                  </li>
+
+
                 </ul>
               </div>
 
