--- a/quality.html
+++ b/quality.html
@@ -101,6 +101,11 @@
           </aside>
           <article class="page__content-body">
             <div class="content__row box">
+              <h2>Качество воды</h2>
+              <p class="page__text">
+                МУП «Водоканал» обеспечивает контроль за качеством питьевой воды на соответствие СанПиН 2.1.3684-21 «Санитарно-эпидемиологические требования к содержанию территорий городских и сельских поселений, к водным объектам, питьевой воде и питьевому водоснабжению, атмосферному воздуху, почвам, жилым помещениям, эксплуатации производственных, общественных помещений, организации и проведению санитарно-противоэпидемических (профилактических) мероприятий» и СанПиН 1.2.3685-21 «Гигиенические нормативы и требования к обеспечению безопасности и (или) безвредности для человека факторов среды обитания».
+              </p>
+              <p class="page__text">Согласно программе производственного контроля МУП «Водоканал», согласованной с ТО Управления Роспотребнадзора по Кировской области в Советском районе, производится отбор проб питьевой воды из арт. скважин и разводящей сети на соответствие радиологическим и санитарно-химическим показателям – ежегодно, на соответствие микробиологическим и органолептическим показателям – ежемесячно.</p>
               <div class="page__accordion">
                 <div data-accordion="title" class="page__accordion-title">
                   Показатели качества холодной воды
@@ -136,8 +141,8 @@
                       </tr>
                       <tr>
                         <td class="td">Мутность</td>
-                        <td class="td center">мг/дм<sup>3</sup></td>
-                        <td class="td center">не более 1,5</td>
+                        <td class="td center">ЕМФ</td>
+                        <td class="td center">не более 2,6</td>
                         <td class="td center">не более 1,5</td>
                       </tr>
                       <tr>
@@ -150,7 +155,6 @@
                   </table>
                 </div>
               </div>
-
               <div class="page__accordion">
                 <div data-accordion="title" class="page__accordion-title">
                   Нормативы состава сточных вод и требованиях к составу и свойствам сточных вод,
