--- a/about.html
+++ b/about.html
@@ -31,9 +31,7 @@
 <header class="header">
     <div class="header__top">
         <div class="header__top-links container">
-            <a href="https://yandex.ru/maps/org/103389193980" target="_blank"
-            >г. Яранск ул. Кирова д. 36</a
-            >
+            <a href="https://yandex.ru/maps/org/103389193980" target="_blank">г. Яранск ул. Кирова д. 36</a>
             <a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
         </div>
     </div>
@@ -45,7 +43,12 @@
             <nav class="header__main-navigation">
                 <ul class="header__navigation-list">
                     <li class="header__navigation-list__item">
-                        <a href="about.html" class="nav__link">О предприятии</a>
+                        <a class="nav__link">О предприятии</a>
+                        <ul class="navigation__sub-menu box">
+                            <li><a href="about.html" class="nav__link">История</a></li>
+                            <li><a href="details.html" class="nav__link">Реквизиты</a></li>
+                            <li><a href="#" class="nav__link">Вакансии</a></li>
+                        </ul>
                     </li>
                     <li class="header__navigation-list__item">
                         <a href="news.html" class="nav__link">Новости</a>
@@ -92,13 +95,13 @@
                <div class="content__row box">
                    <p>МУП «Водоканал» образован 29.08.2006 г. путем разделения МУП «Визит» на 2 организации: МУП «Водоканал» и МУП «Вулкан».</p>
                    <p>МУП «Водоканал» осуществляет деятельность по водоснабжению и водоотведению на территории Яранского городского поселения и 9 сельских поселений Яранского района.</p>
-                   Также осуществляет деятельность по сбору, транспортированию и размещению отходов на полигоне ТКО, предоставляет услуги по помывке в городской бане, в рамках заключенных договоров с Администрацией ЯГП осуществляет деятельность по содержанию и расчистке дорог.
-                   В качестве источника водоснабжения используются артезианские скважины, на территории ЯГП – 15 скважин, на территории сельских поселений – 29 скважин. Глубина скважин составляет от 62 до 140 м.
-                   На территории г. Яранска действует насосная стация 2 подъема с накопительными резервуарами вместимостью 1000 м3.
-                   Ежесуточно потребителям подается около 1600 м3 питьевой воды.
-                   Общее число абонентов…, в том числе - …. юридических лиц.
-                   Протяженность водопроводных сетей – 204,549 км, сетей канализации – 56,033 км.
-                   На обслуживании МУП «Водоканал» имеются очистные сооружения канализации г. Яранска, м. Опытное Поле и м. Знаменка производительностью 6900, 200, 200 м3/сутки соответственно.
+                   <p>Также осуществляет деятельность по сбору, транспортированию и размещению отходов на полигоне ТКО, предоставляет услуги по помывке в городской бане, в рамках заключенных договоров с Администрацией ЯГП осуществляет деятельность по содержанию и расчистке дорог.</p>
+                   <p>В качестве источника водоснабжения используются артезианские скважины, на территории ЯГП – 15 скважин, на территории сельских поселений – 29 скважин. Глубина скважин составляет от 62 до 140 м.</p>
+                   <p>На территории г. Яранска действует насосная стация 2 подъема с накопительными резервуарами вместимостью 1000 м3.</p>
+                   <p>Ежесуточно потребителям подается около 1600 м3 питьевой воды.</p>
+                   <p>Общее число абонентов…, в том числе - …. юридических лиц.</p>
+                   <p>Протяженность водопроводных сетей – 204,549 км, сетей канализации – 56,033 км.</p>
+                   <p>На обслуживании МУП «Водоканал» имеются очистные сооружения канализации г. Яранска, м. Опытное Поле и м. Знаменка производительностью 6900, 200, 200 м3/сутки соответственно.</p>
                </div>
             </div>
         </div>
@@ -108,91 +111,86 @@
 
 <footer>
     <div class="footer__main">
-      <div class="container">
-        <div class="footer__row row">
-          <div class="footer__nav row">
-            <div class="footer__nav-item">
-              <div class="footer__heading">
-                <a href="#" class="footer__nav-link">О предприятии</a>
-              </div>
-              <div class="footer__heading">
-                <a href="#" class="footer__nav-link">Документы</a>
-              </div>
-              <div class="footer__heading">
-                <a href="/news.html" class="footer__nav-link">Новости</a>
-              </div>
-            </div>
+        <div class="container">
+            <div class="footer__row row">
+                <div class="footer__nav row">
+                    <div class="footer__nav-item">
+                        <div class="footer__heading">
+                            <a href="#" class="footer__nav-link">О предприятии</a>
+                        </div>
+                        <div class="footer__heading">
+                            <a href="#" class="footer__nav-link">Документы</a>
+                        </div>
+                        <div class="footer__heading">
+                            <a href="/news.html" class="footer__nav-link">Новости</a>
+                        </div>
+                    </div>
 
-            <div class="footer__nav-item">
-              <div class="footer__heading">Контакты</div>
-              <ul class="footer__nav-list">
-                <li>
-                  <span>Диспетчер</span>
-                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                </li>
-                <li>
-                  <span>Бухгалтерия</span>
-                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                </li>
-                <li>
-                  <span>Касса</span>
-                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                </li>
-                <li>
-                  <span>Юрист</span>
-                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                </li>
-                <li>
-                  <span>Директор</span>
-                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                </li>
-              </ul>
-            </div>
+                    <div class="footer__nav-item">
+                        <div class="footer__heading">Контакты</div>
+                        <ul class="footer__nav-list">
+                            <li>
+                                <span>Директор</span>
+                                <a href="#" class="footer__nav-link">8 (83367) 2-14-84 </a>
+                            </li>
+                            <li>
+                                <span>Диспетчер</span>
+                                <a href="#" class="footer__nav-link">8 (83367) 2-14-63 </a>
+                            </li>
 
-            <div class="footer__nav-item">
-              <div class="footer__heading">Абонентам</div>
-              <ul class="footer__nav-list">
-                <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
-                <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
-                <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
-                <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
-                <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
-              </ul>
-            </div>
+                            <li>
+                                <span>Касса</span>
+                                <a href="#" class="footer__nav-link">8 (83367) 2-22-46 </a>
+                            </li>
 
-            <div class="footer__nav-item">
-              <div class="footer__logo">
-                <img src="images/icons/logoL.svg" class="logo image" alt="" />
-              </div>
-              <div class="footer__social">
-                <a href="#">
-                  <i class="footer__social-icon">
-                    <img src="images/icons/tgIcon.svg" class="image" alt="" />
-                  </i>
-                </a>
-                <a href="#">
-                  <i class="footer__social-icon">
-                    <img src="images/icons/vkIcon.svg" class="image" alt="" />
-                  </i>
-                </a>
-                <a href="#">
-                  <i class="footer__social-icon">
-                    <img src="images/icons/mailIcon.svg" class="image" alt="" />
-                  </i>
-                </a>
-              </div>
-              <div class="footer__info-item">
-                <span>г. Яранск ул. Кирова, 36</span>
-              </div>
+
+                        </ul>
+                    </div>
+
+                    <div class="footer__nav-item">
+                        <div class="footer__heading">Абонентам</div>
+                        <ul class="footer__nav-list">
+                            <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
+                            <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
+                            <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
+                            <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
+                            <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__nav-item">
+                        <div class="footer__logo">
+                            <img src="images/icons/logoL.svg" class="logo image" alt="" />
+                        </div>
+                        <div class="footer__social">
+                            <a href="#">
+                                <i class="footer__social-icon">
+                                    <img src="images/icons/tgIcon.svg" class="image" alt="" />
+                                </i>
+                            </a>
+                            <a href="#">
+                                <i class="footer__social-icon">
+                                    <img src="images/icons/vkIcon.svg" class="image" alt="" />
+                                </i>
+                            </a>
+                            <a href="#">
+                                <i class="footer__social-icon">
+                                    <img src="images/icons/mailIcon.svg" class="image" alt="" />
+                                </i>
+                            </a>
+                        </div>
+                        <div class="footer__info-item">
+                            <span>г. Яранск ул. Кирова, 36</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
     <div class="footer__bottom">
-      <span>2023 © МУП Водоканал г. Яранск</span>
+        <span>2023 © МУП Водоканал г. Яранск</span>
     </div>
-  </footer>
+</footer>
 
 </body>
 </html>
