--- a/contacts.html
+++ b/contacts.html
@@ -34,9 +34,7 @@
   <header class="header">
     <div class="header__top">
       <div class="header__top-links container">
-        <a href="https://yandex.ru/maps/org/103389193980" target="_blank"
-        >г. Яранск ул. Кирова д. 36</a
-        >
+        <a href="https://yandex.ru/maps/org/103389193980" target="_blank">г. Яранск ул. Кирова д. 36</a>
         <a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
       </div>
     </div>
@@ -48,7 +46,12 @@
         <nav class="header__main-navigation">
           <ul class="header__navigation-list">
             <li class="header__navigation-list__item">
-              <a href="about.html" class="nav__link">О предприятии</a>
+              <a class="nav__link">О предприятии</a>
+              <ul class="navigation__sub-menu box">
+                <li><a href="about.html" class="nav__link">История</a></li>
+                <li><a href="details.html" class="nav__link">Реквизиты</a></li>
+                <li><a href="#" class="nav__link">Вакансии</a></li>
+              </ul>
             </li>
             <li class="header__navigation-list__item">
               <a href="news.html" class="nav__link">Новости</a>
@@ -109,42 +112,64 @@
                   <a href="https://vk.com/vodokanal_yaransk">https://vk.com/vodokanal_yaransk</a>
                 </div>
               </div>
-              <div class="contacts__item-row row">
-                <div class="contacts__item-col">Бухгалтерия</div>
-                <div class="contacts__item-col">
-                  <a href="tel:8 (83367) 2-22-22">8 (83367) 2-22-22</a>
-                </div>
-              </div>
-              <div class="contacts__item-row row">
-                <div class="contacts__item-col">Касса</div>
-                <div class="contacts__item-col">
-                  <a href="tel:8 (83367) 2-22-22">8 (83367) 2-22-22</a>
-                </div>
-              </div>
-              <div class="contacts__item-row row">
-                <div class="contacts__item-col">Юрист</div>
-                <div class="contacts__item-col">
-                  <a href="tel:8 (83367) 2-22-22">8 (83367) 2-22-22</a>
-                </div>
-              </div>
+
               <div class="contacts__item-row row">
                 <div class="contacts__item-col">Директор</div>
                 <div class="contacts__item-col">
-                  <a href="tel:8 (83367) 2-22-22">8 (83367) 2-22-22</a>
+                  <a href="tel:88336721484">8 (83367) 2-14-84</a>
                 </div>
               </div>
+
+              <div class="contacts__item-row row">
+                <div class="contacts__item-col">Заместитель директора, диспетчер по вывозу ТКО</div>
+                <div class="contacts__item-col">
+                  <a href="tel:88336722262">8 (83367) 2-22-62</a>
+                </div>
+              </div>
+
+              <div class="contacts__item-row row">
+                <div class="contacts__item-col">Бухгалтерия</div>
+                <div class="contacts__item-col">
+                  <a href="tel:88336721789">8 (83367) 2-17-89</a>
+                </div>
+              </div>
+
+              <div class="contacts__item-row row">
+                <div class="contacts__item-col">Юрист, отдел кадров, специалист по взысканию просроченной задолженности, инженер по охране окружающей среды</div>
+                <div class="contacts__item-col">
+                  <a href="tel:88336723013">8 (83367) 2-30-13</a>
+                </div>
+              </div>
+
+              <div class="contacts__item-row row">
+                <div class="contacts__item-col">Диспетчер</div>
+                <div class="contacts__item-col">
+                  <a href="tel:88336721463">8 (83367) 2-14-63</a>
+                </div>
+              </div>
+
+              <div class="contacts__item-row row">
+                <div class="contacts__item-col">Городская баня</div>
+                <div class="contacts__item-col">
+                  <a href="tel:88336720911">8 (83367) 2-09-11</a>
+                </div>
+              </div>
+
+              <div class="contacts__item-row row">
+                <div class="contacts__item-col">НС 2 подъема</div>
+                <div class="contacts__item-col">
+                  <a href="tel:88336728136">8 (83367) 2-81-36</a>
+                </div>
+              </div>
+
+              <div class="contacts__item-row row">
+                <div class="contacts__item-col">ОСК г. Яранска</div>
+                <div class="contacts__item-col">
+                  <a href="tel:88336721084">8 (83367) 2-10-84</a>
+                </div>
+              </div>
+
             </div>
-
-            Директор 2-14-84
-            Заместитель директора, диспетчер по вывозу ТКО 2-22-62
-            Юрист, отдел кадров, специалист по взысканию просроченной задолженности, инженер по охране окружающей среды 2-30-13
-            Бухгалтерия 2-17-89
-            Касса, контролеры  2-22-46
-            Диспетчер 2-14-63
-            Городская баня  2-09-11
-            НС 2 подъема 2-81-36
-            ОСК г. Яранска 2-10-84
-
             <div class="content__row box">
               <div id="ymap" class="map">
                 <iframe
@@ -248,92 +273,87 @@
       </section>
     </main>
 
-    <footer>
-      <div class="footer__main">
-        <div class="container">
-          <div class="footer__row row">
-            <div class="footer__nav row">
-              <div class="footer__nav-item">
-                <div class="footer__heading">
-                  <a href="#" class="footer__nav-link">О предприятии</a>
-                </div>
-                <div class="footer__heading">
-                  <a href="#" class="footer__nav-link">Документы</a>
-                </div>
-                <div class="footer__heading">
-                  <a href="/news.html" class="footer__nav-link">Новости</a>
-                </div>
+  <footer>
+    <div class="footer__main">
+      <div class="container">
+        <div class="footer__row row">
+          <div class="footer__nav row">
+            <div class="footer__nav-item">
+              <div class="footer__heading">
+                <a href="#" class="footer__nav-link">О предприятии</a>
               </div>
-
-              <div class="footer__nav-item">
-                <div class="footer__heading">Контакты</div>
-                <ul class="footer__nav-list">
-                  <li>
-                    <span>Диспетчер</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                  </li>
-                  <li>
-                    <span>Бухгалтерия</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                  </li>
-                  <li>
-                    <span>Касса</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                  </li>
-                  <li>
-                    <span>Юрист</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                  </li>
-                  <li>
-                    <span>Директор</span>
-                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
-                  </li>
-                </ul>
+              <div class="footer__heading">
+                <a href="#" class="footer__nav-link">Документы</a>
               </div>
-
-              <div class="footer__nav-item">
-                <div class="footer__heading">Абонентам</div>
-                <ul class="footer__nav-list">
-                  <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
-                  <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
-                  <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
-                  <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
-                  <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
-                </ul>
+              <div class="footer__heading">
+                <a href="/news.html" class="footer__nav-link">Новости</a>
               </div>
+            </div>
 
-              <div class="footer__nav-item">
-                <div class="footer__logo">
-                  <img src="images/icons/logoL.svg" class="logo image" alt="" />
-                </div>
-                <div class="footer__social">
-                  <a href="#">
-                    <i class="footer__social-icon">
-                      <img src="images/icons/tgIcon.svg" class="image" alt="" />
-                    </i>
-                  </a>
-                  <a href="#">
-                    <i class="footer__social-icon">
-                      <img src="images/icons/vkIcon.svg" class="image" alt="" />
-                    </i>
-                  </a>
-                  <a href="#">
-                    <i class="footer__social-icon">
-                      <img src="images/icons/mailIcon.svg" class="image" alt="" />
-                    </i>
-                  </a>
-                </div>
-                <div class="footer__info-item">
-                  <span>г. Яранск ул. Кирова, 36</span>
-                </div>
+            <div class="footer__nav-item">
+              <div class="footer__heading">Контакты</div>
+              <ul class="footer__nav-list">
+                <li>
+                  <span>Директор</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-14-84 </a>
+                </li>
+                <li>
+                  <span>Диспетчер</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-14-63 </a>
+                </li>
+
+                <li>
+                  <span>Касса</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-22-46 </a>
+                </li>
+
+
+              </ul>
+            </div>
+
+            <div class="footer__nav-item">
+              <div class="footer__heading">Абонентам</div>
+              <ul class="footer__nav-list">
+                <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
+                <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
+                <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
+                <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
+                <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
+              </ul>
+            </div>
+
+            <div class="footer__nav-item">
+              <div class="footer__logo">
+                <img src="images/icons/logoL.svg" class="logo image" alt="" />
+              </div>
+              <div class="footer__social">
+                <a href="#">
+                  <i class="footer__social-icon">
+                    <img src="images/icons/tgIcon.svg" class="image" alt="" />
+                  </i>
+                </a>
+                <a href="#">
+                  <i class="footer__social-icon">
+                    <img src="images/icons/vkIcon.svg" class="image" alt="" />
+                  </i>
+                </a>
+                <a href="#">
+                  <i class="footer__social-icon">
+                    <img src="images/icons/mailIcon.svg" class="image" alt="" />
+                  </i>
+                </a>
+              </div>
+              <div class="footer__info-item">
+                <span>г. Яранск ул. Кирова, 36</span>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="footer__bottom">
-        <span>2023 © МУП Водоканал г. Яранск</span>
-      </div>
-    </footer>
+    </div>
+    <div class="footer__bottom">
+      <span>2023 © МУП Водоканал г. Яранск</span>
+    </div>
+  </footer>
   </body>
 </html>
